# wind-vis-data

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  getgfs.py  pyproject.toml  run.py
lib/: gfs_download.py
windvisdata/: gfs_download.py  grib_data.py  latest_gfs_to_json.py  metadata.py  run.py
