[tool.poetry]
name = "wind_vis_data"
version = "0.1.0"
description = ""
authors = ["Alistair McKelvie <alistair.mckelvie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pygrib = "^2.1.4"

[tool.poetry.dev-dependencies]
pudb = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
